# Magic-CPP-Service

./: .gitignore  BaseDeDatos.cpp  BaseDeDatos.h  CMakeLists.txt  ConexionWeb.cpp  ConexionWeb.h  Instrucciones.txt  SerialPort.cpp  SerialPort.h  TestEndpointTarget.cpp  TestTarget.cpp  TestTarget.h  makefile.old  sample_main.cpp  servicio_c++  tablas.h  test
boost_1_61_0/: b2
boost_1_61_0/bin.v2/standalone/ac/gcc-4.8/release/link-static/threading-multi/: z
boost_1_61_0/stage/lib/: libboost_container.so.1.61.0  libboost_iostreams.so.1.61.0
socket.io-poco/src/examples/: server.js
